--- a/modules/simple-video-player-w-text.module/module.html
+++ b/modules/simple-video-player-w-text.module/module.html
@@ -1,6 +1,6 @@
 <div class="flex flex-col xl:flex-row">
   <div class="flex flex-col w-full xl:w-1/2 px-4 pt-10 pb-4 xl:pb-9 m-0 justify-start align-start">
-    <p class="mb-2 h3">{{ module.text.title }}</p>
+    <h2 class="mb-2 h3">{{ module.text.title }}</h2>
     <p class="mb-3 paragraph-1">{{ module.text.description }}</p>
     <button class="watch-now-button bg-pink uppercase w-fit leading-[1.28] text-white text-xs">{{ module.button_label
       }}</button>
