--- a/sections/contact.html
+++ b/sections/contact.html
@@ -59,7 +59,7 @@
       {% end_dnd_row %}
       {% dnd_row %}
         {% dnd_module 
-          path='@hubspot/form'
+          path='../modules/contact-form'
         %}
         {% end_dnd_module %}
       {% end_dnd_row %}
