--- a/modules/featured-services.module/module.html
+++ b/modules/featured-services.module/module.html
@@ -14,7 +14,7 @@
 	<div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-2 2xl:grid-cols-3 gap-2 text-white uppercase">
 		{% for card in module.cards %}
 		<div class="w-[260px] h-[180px] rounded-md drop-shadow-sm flex flex-col justify-center items-center transition-all"
-			style="background-color: {{card.card_color.color}};">
+			style="background-color: {{card.card_color.color}}">
 			<img src="{{card.image_field.src}}" alt="{{card.image_field.alt}}" class="mb-2">
 			<p class="font-semibold">
 				{{ card.card_title }}
