--- a/modules/swiper-gallery.module/module.html
+++ b/modules/swiper-gallery.module/module.html
@@ -13,18 +13,26 @@
   <img src='{{ get_asset_url("../../images/icons/small-dots.svg") }}'
     class="absolute left-[-65px] bottom-[-85px] block" loading="lazy">
   {% endif %}
-  <p class="mb-5 text-2xl leading-tight lg:text-7xl lg:leading-1">{{ module.title }}</p>
-  <div class="sponsorship-images swiper max-w-[1000px]" data-sponsorship-module-name="{{ name }}">
+  <h3 class="mb-5 text-2xl leading-tight lg:text-7xl lg:leading-1 font-bold">{{ module.title }}</h3>
+  <div class="swiper-gallery-{{name}} swiper max-w-[1000px]">
     <div class="flex items-center swiper-wrapper">
       {% for item in module.image_group %}
-      <a href="{{item.image_link.url.href}}" class="swiper-slide max-w-[200px] sm:max-w-15">
-        <img class="max-w-[200px] sm:max-w-15" src="{{ item.image_field.src }}" width="200px" loading="lazy"
-          alt="{{ item.image_field.alt }}">
-      </a>
+        {% if item.link_image == true %}
+          <a href="{{item.image_link.url.href}}" class="swiper-slide max-w-[200px] sm:max-w-15">
+            <img class="w-full h-full object-center object-cover max-w-[200px] sm:max-w-15" src="{{ item.image_field.src }}" width="200px" loading="lazy"
+              alt="{{ item.image_field.alt }}">
+          </a>
+          {% else %}
+          <div class="swiper-slide max-w-[200px] sm:max-w-15">
+            <img class="w-full h-full object-center object-cover max-w-[200px] sm:max-w-15" src="{{ item.image_field.src }}" width="200px" loading="lazy"
+              alt="{{ item.image_field.alt }}">
+          </div>
+        {% endif %}
+     
       {% endfor %}
     </div>
   </div>
-  <div class="sponsorship-images-pagination-container swiper-pagination relative mt-4 bottom-0"></div>
+  {# <div class="swiper-gallery-pagination-container swiper-pagination-{{ name }} flex justify-center relative mt-4 bottom-0 w-full h-[20px]"></div> #}
 
   {% if module.show_button == true %}
   <div class="flex justify-center w-full">
@@ -49,30 +57,26 @@
     document.head.appendChild(link);
   }
   
-  let sponsorshipMainContainer = document.getElementsByClassName("sponsorship-images");
-  let sponsorshipSwipers = [];
-  
   window.addEventListener('load', () => {
-    for (let i = 0; i < sponsorshipMainContainer.length; i++) {
-      let currentModuleId = sponsorshipMainContainer[i].dataset.sponsorshipModuleName;
-      sponsorshipMainContainer[i].className += " sponsorship-images_" + currentModuleId;
-
-      sponsorshipSwipers[i] = new Swiper(".sponsorship-images_" + currentModuleId, {
-        slidesPerView: "auto",
-        spaceBetween: 60,
-        freeMode: {
-          enabled: true,
-          sticky: true,
-        },
-        mousewheel: {
-          forceToAxis: true,
-        },
-        autoplay: {
-          delay: 2500,
-          disableOnInteraction: false,
-        },
-      });
-    }
+    const swiper = new Swiper(".swiper-gallery-" + '{{name}}', {
+      slidesPerView: "auto",
+      spaceBetween: 60,
+      {# pagination: {
+        el: ".swiper-pagination-{{name}}",
+        clickable: true,
+      }, #}
+      freeMode: {
+        enabled: true,
+        sticky: true,
+      },
+      mousewheel: {
+        forceToAxis: true,
+      },
+      autoplay: {
+        delay: 2500,
+        disableOnInteraction: true,
+      },
+    });
   })
 
 </script>
