--- a/sections/hero.html
+++ b/sections/hero.html
@@ -11,15 +11,13 @@
 	background_image={
 		'backgroundPosition': 'MIDDLE_CENTER',
     'backgroundSize': 'cover',
-    'imageUrl': resize_image_url(context.backgroundImage || get_asset_url('../images/at-hero-image.jpg'), 0, 0, 1920)
+    'imageUrl': resize_image_url(context.backgroundImage || get_asset_url('../images/at-sistem-hero-image.jpeg'), 0, 0, 1920)
 	}
 %}
 	{% dnd_column offset=0, width=12 %}
 		{% dnd_row offset=0, width=12 %}
-			{% dnd_module
-				path='../modules/hints'
-			%}
-			{% end_dnd_module %}
+			
+
 		{% end_dnd_row %}
 	{% end_dnd_column %}
 	
