Create Banner Small Section, Expanded Services Section, Add Button to Header 1,

--- a/sections/featured-services.html
+++ b/sections/featured-services.html
@@ -3,7 +3,7 @@
   label: Featured Services
   isAvailableForNewContent: true
   screenshotPath: ../images/section-previews/featured-services.jpg
-  description: "Featured Services Seaction"
+  description: "Featured Services Section"
 -->
 
 {% dnd_section
