--- a/modules/featured-services.module/module.html
+++ b/modules/featured-services.module/module.html
@@ -1,6 +1,6 @@
 <div class="flex flex-col xl:flex-row justify-between gap-5 items-center">
 	<div class="border-l-[10px] border-l-pink pl-5 max-w-[550px] h-min">
-		<h2 class="font-bold text-5xl">{{ module.title }}</h2>
+		<h2 class="font-bold text-2xl lg:text-5xl">{{ module.title }}</h2>
 		<p class="font-light text-sm my-2 leading-normal">{{ module.description }}</p>
 		{% if module.link_field.url.href != '' %}
 		<a href="{{ module.link_field.url.href }}" class="flex gap-1 items-center">
@@ -13,7 +13,7 @@
 	</div>
 	<div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-2 2xl:grid-cols-3 gap-2 text-white uppercase">
 		{% for card in module.cards %}
-		<div class="w-[260px] h-[180px] rounded-md drop-shadow-sm flex flex-col justify-center items-center transition-all"
+		<div class="w-[260px] h-[180px] rounded-md drop-shadow-sm flex flex-col justify-center items-center"
 			style="background-color: {{card.card_color.color}}">
 			<img src="{{card.image_field.src}}" alt="{{card.image_field.alt}}" class="mb-2">
 			<p class="font-semibold">
