--- a/sections/banner-small.html
+++ b/sections/banner-small.html
@@ -13,8 +13,7 @@
 	{% dnd_column offset=0, width=12 %}
 		{% dnd_row offset=0, width=12 %}
 			{% dnd_module
-        path='@hubspot/rich_text',
-        html={{ context.content || '<p class="border-l-[10px] border-l-blue pl-5 font-normal text-xs lg:text-xl text-left"> It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using Content here, content here, making it look like readable English. Many desktop publishing.</p>' }}
+        path='../modules/banner-small'
       %}
       {% end_dnd_module %}
 		{% end_dnd_row %}
