--- a/sections/header-1.html
+++ b/sections/header-1.html
@@ -25,7 +25,38 @@
 		{% dnd_row offset=0, width=12 %}
 			{% dnd_module
 				path='@hubspot/rich_text',
-				html={{ context.subtitle || '<p class="font-light text-lg md:text-3xl">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>' }}
+				html={{ context.subtitle || '<p class="font-light text-lg md:text-3xl mb-2">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>' }}
+			%}
+			{% end_dnd_module %}
+		{% end_dnd_row %}
+		{% dnd_row offset=0, width=12 %}
+			{% dnd_module
+				path='@hubspot/button',
+				button_text="BUTTON LABEL",
+				link={ "url": { "type": "EXTERNAL", "href": "https://atsistem.rs", "content_id": null }, "open_in_new_tab": false, "no_follow": false },
+				style={
+					"override_default_style": true, 
+					"button_font": { 
+						"color": "#373738", 
+						"size_unit": "px",
+						"font_set": "Poppins",
+					}, 
+					"button_color": { 
+						"color": "#ffffff", 
+						"opacity": 100 
+					},
+					"text_hover_color": { 
+						"color": "#373738", 
+						"opacity": 100
+					}, 
+					"button_hover_color": { 
+						"color": "#ffffff", 
+						"opacity": 100 
+					},
+					"horizontal_padding": 25,
+					"vertical_padding": 10
+				},
+				horizontal_alignment="CENTER"
 			%}
 			{% end_dnd_module %}
 		{% end_dnd_row %}
