--- a/sections/video-player.html
+++ b/sections/video-player.html
@@ -23,7 +23,13 @@
 			width=12,
 		%}
       {% dnd_module
-				path='../modules/simple-video-player-w-text.module'
+				path='../modules/simple-video-player-w-text.module',
+				text={
+					'h_tag_choice': "{{ context.h_tag_choice || 'h3'}}",
+					'title': "{{ context.title || 'Watch On Demand' }}",
+					'description': "{{ context.description || 'Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo.' }}"
+				},
+				button_label="{{ context.button_label || 'Link Label' }}"
 			%}
 			{% end_dnd_module %}
 		{% end_dnd_row %}
