--- a/modules/banner-small.module/module.html
+++ b/modules/banner-small.module/module.html
@@ -1,5 +1,7 @@
-<div class="px-5 border-l-[10px] border-l-blue flex flex-col lg:flex-row gap-2 items-start md:items-center justify-between w-full">
+<div
+  class="px-5 border-l-[10px] border-l-blue flex flex-col lg:flex-row gap-2 items-start md:items-center justify-between w-full">
   <p class="text-lg lg:text-xl text-left">{{module.text_field}}</p>
-  <a class="button uppercase text-center text-base lg:text-lg p-5" href="{{ module.link_field.url.href }}" {{
-    'target="_blank"' if module.link_field.open_in_new_tab }}>{{ module.link_label }}</a>
+  <a class="button uppercase text-center text-base lg:text-lg p-5 bg-blue hover:bg-blueDark"
+    href="{{ module.link_field.url.href }}" {{ 'target="_blank"' if module.link_field.open_in_new_tab }}>{{
+    module.link_label }}</a>
 </div>
