--- a/modules/expanded-services.module/module.html
+++ b/modules/expanded-services.module/module.html
@@ -1,6 +1,6 @@
 <div class="flex flex-col gap-5 lg:gap-3 w-full">
   {% for card in module.cards %}
-  <div class="flex flex-col justify-between items-center lg:flex-row gap-3 lg:gap-5 lg:even:bg-lightGrey">
+  <div class="flex flex-col justify-between items-center lg:flex-row gap-3 lg:gap-5">
     <div class="min-w-[260px] w-[260px] h-[180px] rounded-md drop-shadow-sm flex flex-col justify-center items-center"
       style="background-color: {{card.card_color.color}}">
       <img src="{{card.image_field.src}}" alt="{{card.image_field.alt}}">
