--- a/sections/image-with-text.html
+++ b/sections/image-with-text.html
@@ -7,7 +7,7 @@
 -->
 
 {% dnd_section
-  class="px-4 py-4 md:py-8"
+  class="px-4 py-6"
 %}
   {% dnd_column offset=0, width=12 %}
     {% dnd_row %}
