Create new Expanded Services Slider Module and Section. Edit Pools Services Page Template.

--- a/sections/image-cards.html
+++ b/sections/image-cards.html
@@ -3,7 +3,7 @@
   label: Image Cards
   isAvailableForNewContent: true
   screenshotPath: ../images/section-previews/image-cards.jpg
-  description: "Grey section with post with image, positions reversible"
+  description: "Two Column Section with post with image"
 -->
 
 {% dnd_section 
