--- a/sections/products-grid.html
+++ b/sections/products-grid.html
@@ -3,7 +3,7 @@
   label: Products Grid
   isAvailableForNewContent: true
   screenshotPath: ../images/section-previews/products-grid.png
-  description: "Section with Listed Shop Categories"
+  description: "Three Column Section with Shop Categories List"
 -->
 
 {% dnd_section class="py-8 px-4" %}
