--- a/modules/menu.module/module.html
+++ b/modules/menu.module/module.html
@@ -2,50 +2,69 @@
 
 {% macro menu_items() %}
 
-  {% set menu = menu(module.menu, 'site_root').children %}
+{% set menu = menu(module.menu, 'site_root').children %}
 
-  {% macro render_link_item(link) %}
-    <li class="menu__item {{ 'menu__item--has-submenu' if link.children }}">
-      {% if link.children == [] %}
-        <a class="menu__link" href="{{ link.url }}">{{ link.label }}</a>
-      {% endif %}
-      {% if link.children != [] %}
-        <div class="menu__link-wrapper">
-          <span class="menu__child-toggle-icon toggle-icon-spacer">
-            <svg xmlns="http://www.w3.org/2000/svg" width="6" height="3" viewBox="0 0 11.414 7.121">
-              <g id="icon-small-arrow-left" transform="translate(10.707 0.707) rotate(90)">
-                <path id="icon-small-arrow-2" data-name="icon-small-arrow" d="M119.62,6l5,5-5,5" transform="translate(-119.62 -6)" fill="none" stroke="#F0F3F5" stroke-width="2"/>
-              </g>
-            </svg>
-          </span>
-          <a class="menu__link" href="{{ link.url }}">{{ link.label }}</a>
-          <span class="menu__child-toggle-icon">
-            <svg xmlns="http://www.w3.org/2000/svg" width="6" height="3" viewBox="0 0 11.414 7.121">
-              <g id="icon-small-arrow" transform="translate(10.707 0.707) rotate(90)">
-                <path id="icon-small-arrow-2" data-name="icon-small-arrow" d="M119.62,6l5,5-5,5" transform="translate(-119.62 -6)" fill="none" stroke="#F0F3F5" stroke-width="2"/>
-              </g>
-            </svg>
-          </span>
-        </div>
-        <ul class="menu__submenu no-list">
-          {% for sublink in link.children %}
-            {{ render_link_item(sublink) }}
-          {% endfor %}
-        </ul>
-      {% endif %}
-    </li>
-  {% endmacro %}
+{% macro render_link_item(link) %}
+<li class="
+    menu__item 
+    {{ 'menu__item--has-submenu' if link.children }}
+    p-0 relative flex items-center flex-col justify-center cursor-pointer
+    ">
+  {% if link.children == [] %}
+  <a class="menu__link" href="{{ link.url }}">{{ link.label }}</a>
+  {% endif %}
+  {% if link.children != [] %}
+  <div class="flex">
+    <span class="
+      menu__child-toggle-icon
+      flex items-center justify-center invisible
+      ml-[15px] lg:ml-0
+      ">
+      <svg class="w-[12px] h-[6px] lg:w-[10px] lg:h-[6px]" xmlns="http://www.w3.org/2000/svg" width="10" height="6"
+        viewBox="0 0 11.414 7.121">
+        <g id="icon-small-arrow-left" transform="translate(10.707 0.707) rotate(90)">
+          <path id="icon-small-arrow-2" data-name="icon-small-arrow" d="M119.62,6l5,5-5,5"
+            transform="translate(-119.62 -6)" fill="none" stroke="#F0F3F5" stroke-width="2" />
+        </g>
+      </svg>
+    </span>
+    <a class="menu__link" href="{{ link.url }}">{{ link.label }}</a>
+    <span class="
+      menu__child-toggle-icon
+      flex items-center justify-center 
+      ml-[15px] lg:ml-0
+      ">
+      <svg class="w-[12px] h-[6px] lg:w-[10px] lg:h-[6px]" xmlns="http://www.w3.org/2000/svg" width="10" height="6"
+        viewBox="0 0 11.414 7.121">
+        <g id="icon-small-arrow" transform="translate(10.707 0.707) rotate(90)">
+          <path class="stroke-white lg:stroke-grey" id="icon-small-arrow-2" data-name="icon-small-arrow"
+            d="M119.62,6l5,5-5,5" transform="translate(-119.62 -6)" fill="none" stroke="#F0F3F5" stroke-width="2" />
+        </g>
+      </svg>
+    </span>
+  </div>
+  <ul class="
+    menu__submenu
+    list-none flex-col bg-white lg:shadow-lg z-[99] top-full right-1 hidden border-none rounded-none shadow-none static transform-none w-full py-2 px-3
+    lg:px-1 lg:py-2 lg:rounded lg:w-max lg:absolute">
+    {% for sublink in link.children %}
+    {{ render_link_item(sublink) }}
+    {% endfor %}
+  </ul>
+  {% endif %}
+</li>
+{% endmacro %}
 
-  {% for link in menu %}
-    {{ render_link_item(link) }}
-  {% endfor %}
+{% for link in menu %}
+{{ render_link_item(link) }}
+{% endfor %}
 
 {% endmacro %}
 
 {# Desktop menu #}
 
-<nav class="menu menu--desktop" aria-label="Main menu">
-  <ul class="menu__wrapper no-list">
+<nav class="menu menu--desktop hidden lg:block transition-all duration-500" aria-label="Main menu">
+  <ul class="flex no-list">
     {{ menu_items() }}
   </ul>
 
@@ -53,8 +72,9 @@
 
 {# Mobile menu #}
 
-<nav class="menu menu--mobile" aria-label="Main menu">
-  <ul class="menu__wrapper no-list">
+<nav class="menu menu--mobile lg:hidden
+  flex pt-[130px]" aria-label="Main menu">
+  <ul class="flex list-none flex-col flex-1">
     {{ menu_items() }}
   </ul>
 </nav>
